Missing Word added

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <p>QR-based restaurant ordering system for seamless customer experience.</p>
                             <a href="https://github.com/AkshataPatil97/Restaurant-Ordering-System" target="_blank">View on GitHub</a>
                         </div>
-                        <span class="work__title">Restaurant Ordering</span>
+                        <span class="work__title">Restaurant Ordering System</span>
                     </div>
                 </div>
             </section>            
