--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Akshata</a>
+                    <a href="https://www.linkedin.com/in/akshata-patil-5b0b31261/" class="nav__logo">Akshata</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -26,7 +26,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -43,13 +43,13 @@
                 <div class="home__data">
                     <h2 class="home__title">Hi,<br>I'am <span class="home__title-color">Akshata</span><br> Full-stack Developer</h2>
 
-                    <a href="#contact" class="button">Contact</a>
+                    <a href="assets/Akshata_CV.pdf" download="Akshata_Resume.pdf" class="button">Download Resume</a>
                 </div>
 
-                <div class="home__social">
+                <!-- <div class="home__social">
                     <a href="https://www.linkedin.com/in/akshata-patil-5b0b31261/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/AkshataPatil97" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                </div>
+                </div> -->
 
                 <div class="home__img">
                     <svg class="home__blob" viewBox="0 0 478 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -146,8 +146,8 @@
             </section>
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+            <section class="work section" id="projects">
+                <h2 class="section-title">Projects</h2>
             
                 <div class="work__container bd-grid">
                     <div class="work__item" onclick="toggleProject(this)">
