--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <section class="work section" id="certificate">
             <h2 class="section-title">Certification</h2>
 
-            <div class="work__container bd-grid">
+            <div class="work__container bdgrid">
                 <div class="work__item" onclick="toggleProject(this)">
                     <img src="assets/img/Akshata_Kiran_Academy_Cert.jpg" alt="Project 1" class="work__img">
                     <div class="work__info">
