--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2 class="home__title">Hi,<br>I'am <span class="home__title-color">Akshata</span><br> Full-stack
                     Developer</h2>
 
-                <a href="assets/Akshata_CV.pdf" download="Akshata_Resume.pdf" class="button">Download Resume</a>
+                <a href="assets/Akshata_Resume.pdf" download="Akshata_Resume.pdf" class="button">Download Resume</a>
             </div>
 
             <!-- <div class="home__social">
